Created the map renderer and the showcase page

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Re-STimetable</title>
 
+    <!-- remix icon -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+
     <script>
         // this script add .st-dark, TODO: add overrides, and polling
         const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
