--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- Google search console -->
+    <meta name="google-site-verification" content="TBsdtulj1t___JvkSN5VqX0YNI6-b9VsFe2S-ucN_mw" />
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Re-STimetable</title>
 
