First setup, SEO stuff

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- Google search console -->
-    <meta name="google-site-verification" content="TBsdtulj1t___JvkSN5VqX0YNI6-b9VsFe2S-ucN_mw" />
+    <meta name="google-site-verification" content="TBsdtulj1t___JvkSN5VqX0YNI6-b9VsFe2S-ucN_mw"/>
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Re-STimetable</title>
+    <title>Scots Timetable</title>
+    <meta name="description" content="The unofficial Scots College timetable management software.
+    STimetable provides automatic updating and displaying of your timetables, while offering an advance filter system so you can find exactly what you want.">
 
     <!-- remix icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
